Remove unnecessary array conversions