@@ -39,8 +39,9 @@ import org.junit.runner.RunWith;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
-import java.util.*;
+import java.util.Set;
 import javax.inject.Inject;
 import javax.ws.rs.client.Entity;
 import javax.ws.rs.core.GenericType;
@@ -90,7 +91,7 @@ public class OrganizationServicePermissionsIT extends ServiceIntegrationTestBase
       Organization organization = new Organization(code, name, "a", "b", null, null);
       organizationFacade.createOrganization(organization);
       Permission newPermission = new Permission(userId, Role.toStringRoles(Collections.singleton(Role.READ)));
-      organizationFacade.updateUserPermissions(code, newPermission);
+      organizationFacade.updateUserPermissions(code, Set.of(newPermission));
       Set<Permission> perm = organizationDao.getOrganizationByCode(code).getPermissions().getUserPermissions();
       LumeerAssertions.assertPermissions(perm, newPermission);
 
@@ -118,7 +119,7 @@ public class OrganizationServicePermissionsIT extends ServiceIntegrationTestBase
          if (i % 2 == 0) {
             organizationFacade.removeUserPermission(codes.get(i), userId);
          } else {
-            organizationFacade.updateUserPermissions(codes.get(i), new Permission(userId, Role.toStringRoles(Collections.singleton(Role.READ))));
+            organizationFacade.updateUserPermissions(codes.get(i), Set.of(Permission.buildWithRoles(userId, Set.of(Role.READ))));
          }
       }
 
@@ -157,7 +158,7 @@ public class OrganizationServicePermissionsIT extends ServiceIntegrationTestBase
       String newName = "NewTestUpdateOrganizationManageRole";
       Organization organization = new Organization(code, name, "a", "b", null, null);
       organizationFacade.createOrganization(organization);
-      organizationFacade.updateUserPermissions(code, new Permission(userId, Role.toStringRoles(new HashSet<Role>(Arrays.asList(Role.READ, Role.MANAGE)))));
+      organizationFacade.updateUserPermissions(code, Set.of(Permission.buildWithRoles(userId, Set.of(Role.READ, Role.MANAGE))));
 
       Response response = client.target(TARGET_URI)
                                 .path(PATH_PREFIX + code)
@@ -193,7 +194,7 @@ public class OrganizationServicePermissionsIT extends ServiceIntegrationTestBase
       String code = "testGetOrganizationPermissionsManageRole_code";
       Organization organization = new Organization(code, name, "a", "b", null, null);
       organizationFacade.createOrganization(organization);
-      organizationFacade.updateUserPermissions(code, new Permission(userId, Role.toStringRoles(new HashSet<Role>(Arrays.asList(Role.READ, Role.MANAGE)))));
+      organizationFacade.updateUserPermissions(code, Set.of(Permission.buildWithRoles(userId, Set.of(Role.READ, Role.MANAGE))));
 
       Response response = client.target(TARGET_URI)
                                 .path(PATH_PREFIX + code + "/permissions")
@@ -226,7 +227,7 @@ public class OrganizationServicePermissionsIT extends ServiceIntegrationTestBase
       String code = "testUpdateUserPermissionNoRole_code";
       Organization organization = new Organization(code, name, "a", "b", null, null);
       organizationFacade.createOrganization(organization);
-      organizationFacade.updateUserPermissions(code, new Permission(userId, Role.toStringRoles(new HashSet<>(Arrays.asList(Role.READ, Role.MANAGE)))));
+      organizationFacade.updateUserPermissions(code, Set.of(Permission.buildWithRoles(userId, Set.of(Role.READ, Role.MANAGE))));
       Permission[] newPermission = { new Permission(userId, Role.toStringRoles(new HashSet<>(Collections.singletonList(Role.WRITE)))) };
 
       Response response = client.target(TARGET_URI)
@@ -259,7 +260,7 @@ public class OrganizationServicePermissionsIT extends ServiceIntegrationTestBase
       String code = "testRemoveUserPermissionNoRole_code";
       Organization organization = new Organization(code, name, "a", "b", null, null);
       organizationFacade.createOrganization(organization);
-      organizationFacade.updateUserPermissions(code, new Permission(userId, Role.toStringRoles(new HashSet<Role>(Arrays.asList(Role.READ, Role.MANAGE)))));
+      organizationFacade.updateUserPermissions(code, Set.of(Permission.buildWithRoles(userId, Set.of(Role.READ, Role.MANAGE))));
 
       Response response = client.target(TARGET_URI)
                                 .path(PATH_PREFIX + code + "/permissions/users/" + userId)
@@ -293,7 +294,7 @@ public class OrganizationServicePermissionsIT extends ServiceIntegrationTestBase
       String code = "testUpdateGroupPermissionNoRole_code";
       Organization organization = new Organization(code, name, "a", "b", null, null);
       organizationFacade.createOrganization(organization);
-      organizationFacade.updateUserPermissions(code, new Permission(userId, Role.toStringRoles(new HashSet<>(Arrays.asList(Role.READ, Role.MANAGE)))));
+      organizationFacade.updateUserPermissions(code, Set.of(Permission.buildWithRoles(userId, Set.of(Role.READ, Role.MANAGE))));
       String group = "testGroup2";
       Permission[] newPermission = { new Permission(group, Role.toStringRoles(new HashSet<>(Collections.singletonList(Role.WRITE)))) };
 
@@ -328,7 +329,7 @@ public class OrganizationServicePermissionsIT extends ServiceIntegrationTestBase
       String code = "testRemoveGroupPermissionNoRole_code";
       Organization organization = new Organization(code, name, "a", "b", null, null);
       organizationFacade.createOrganization(organization);
-      organizationFacade.updateUserPermissions(code, new Permission(userId, Role.toStringRoles(new HashSet<>(Arrays.asList(Role.READ, Role.MANAGE)))));
+      organizationFacade.updateUserPermissions(code, Set.of(Permission.buildWithRoles(userId, Set.of(Role.READ, Role.MANAGE))));
       String group = "testGroup3";
 
       Response response = client.target(TARGET_URI)
